Add code for Streams API examples